use bash highlighting

--- a/_posts/2017-01-24-04_Git_basics.md
+++ b/_posts/2017-01-24-04_Git_basics.md
@@ -85,22 +85,27 @@ other folders and documents):
 ~~~
 ~/PHY494/
         01_shell/
-        02_python/
-		         gutentag.py
+        03_python/
+		         temperatures.py
+                 temperatures2.py
+                 heaviside.py
+                 fibonacci.py
+                 countup.py
+                 step_function.py
 ~~~
 
-Make the `PHY494` directory a **repository** with the `git init` command:
+Turn the `PHY494` directory into **repository** with the `git init` command:
 
-~~~
+{% highlight bash %}
 cd ~/PHY494
 git init
-~~~
+{% endhighlight %}
 
 That's it. Although, not much happened yet... except, check with
 
-~~~
+{% highlight bash %}
 ls -la
-~~~
+{% endhighlight %}
 
 A new hidden directory `~/PHY494/.git/` appeared. This is your actual
 repository where Git stores all its information. **Do not change
@@ -110,9 +115,9 @@ your repository is irrevocably gone (and there is no undo for that!).
 
 Now try the (possibly) most-used git command:
 
-~~~
+{% highlight bash %}
 git status
-~~~
+{% endhighlight %}
 
 
 ### Adding files ###
@@ -120,29 +125,31 @@ git status
 Prepare the files to be committed to the repository: `git add` adds
 files and directories to a "staging area":
 
-~~~
+{% highlight bash %}
 git add .
 git status
-~~~
+{% endhighlight %}
 
 (Use `git reset FILENAME` to unstage any files that you might have
-added accidentally.)
+added accidentally. For instance, do not checking backup files created
+by your editor.)
 
 The files are not committed yet. You can do more work, add more files...
 
 
 ### Committing ###
 
-~~~
+{% highlight bash %}
 git commit
-~~~
+{% endhighlight %}
 
 * When your editor pops up, enter a **commit message**: Convention:
   - first line (<60 char): one line summary
   - second line: blank
   - third and following lines: more details
   The first line is mandatory (you cannot have a commit without a
-  message), the rest is optional.
+  message), the rest is optional. *The commit message should
+  succinctly summarize the changes in the commit.*
 * After you wrote and saved the message (in `nano`, `^O`; in `vim`,
   `i` to write, `ESC :wq` to save and exit) and exited (`^X` in
   `nano`), your changes will be committed to the repository.
@@ -157,26 +164,26 @@ again.
 
 Read the history with
 
-~~~
+{% highlight bash %}
 git log
-~~~
+{% endhighlight %}
 
 
 ### Removing and renaming files
 
 Removing files and directories via git allows you to get them back later.
 
-~~~
+{% highlight bash %}
 git rm FILENAME
 git rm -r DIRECTORY
-~~~
+{% endhighlight %}
 
 Renaming is the same as removing the old file and adding the new one
 but there is also a simple command
 
-~~~
+{% highlight bash %}
 git mv OLD NEW
-~~~
+{% endhighlight %}
 
 The `git rm` and `git mv` commands are similar to the `git add`
 command in that they stage these changes; you still have to
@@ -187,17 +194,17 @@ command in that they stage these changes; you still have to
 
 Initialize a local repository from a remote source:
 
-~~~
+{% highlight bash %}
 git clone URL
-~~~
+{% endhighlight %}
 
 Clone the repository where code and data will be posted:
 
-~~~
+{% highlight bash %}
 cd ~
 git clone https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources.git
 cd PHY494-resources
-~~~
+{% endhighlight %}
 
 Note:
 
@@ -213,15 +220,15 @@ Note:
 
 Update your local repository with any "upstream" changes:
 
-~~~
+{% highlight bash %}
 git pull
-~~~
+{% endhighlight %}
 
 Update the remote repository with you local changes (commits):
 
-~~~
+{% highlight bash %}
 git push
-~~~
+{% endhighlight %}
 
 (For "pushing" to work, you must be allowed to write to the remote
 repository; this will not work for *PHY494-resources* but we will use
@@ -248,13 +255,13 @@ includes
 1. Go to <https://github.com> and create a new account. It is
    free.[^2] Remember your
    GitHub **username** and the **password**.
-2. Create a new repository *PHY494-class*.
+2. Create a new repository *PHY494*.
 3. Note the repository URL
-   https://github.com/USERNAME/PHY494-class.git
-4. Add the remote repository to your repository (replace *USERNAME*
-   with your GitHub username):
+   https://github.com/USERNAME/PHY494.git
+4. Add the remote repository to your local repository `~/PHY494`
+   (replace *USERNAME* with your GitHub username):
 
-        git remote add origin https://github.com/USERNAME/PHY494-class.git
+        git remote add origin https://github.com/USERNAME/PHY494.git
 
    We named the remote "origin", which is a common choice for the main
    repository. You can have many different remotes, just give them
@@ -276,38 +283,59 @@ includes
 		git push
 
    Look at the web interface at
-   https://github.com/USERNAME/PHY494-class and see your changes
+   https://github.com/USERNAME/PHY494 and see your changes
    appear.
 
 For the rest of the semester, commit what you did during each class
-session to the repository.
+session to the `~/PHY494` repository on your laptop (and also push
+to your GitHub repository as a backup).
+
+**Note**: Your GitHub repository is public. Do not commit homeworks
+there; you will receive a *private* repository for the duration of the
+class for this purpose.
+
 
 ## Class resources on GitHub
 
-Notebooks and files are being made available on GitHub in the
+Code, notebooks, and files are being made available on GitHub in the
 repository
 [ASU-CompMethodsPhysics-PHY494/PHY494-resources](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources). If
 you have not done so already:
 
-~~~
+{% highlight bash %}
 cd ~
 git clone https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources.git
-~~~
+{% endhighlight %}
+ 
 
 Update when your instructor changed anything on the remote:
 
-~~~
+{% highlight bash %}
 cd ~/PHY494-resources
 git pull
-~~~
+{% endhighlight %}
 
-(Note that you should not be changing anything inside
+Note that you should not be changing anything inside
 `~/PHY494-resources` but instead *copy* whatever you want to change
-to your own work directory. Otherwise you might run into *merge
-conflicts*. If that happens, copy *all the file or files that you
-edited* and then reset with the command
+to your own work directory. For example, in the
+[Fix as many bugs as possible! challenge]({{site.baseurl}}{% post_url
+2017-01-24-05_Debugging %}#activity-fix-as-many-bugs-as-possible) you
+would copy all the `bugs_*.py` files to your own `~/PHY494` repo and
+work there:
 
-~~~
+{% highlight bash %}
+cp -r ~/PHY494-resources/05_debugging ~/PHY494
+cd ~/PHY494/05_debugging
+{% endhighlight %}
+
+
+If you happen to have accidentally edited files inside
+`~/PHY494-resources` you might run into *merge conflicts* when you run
+`git pull` the next time. If that happens, copy *all files that you
+edited* (use `git status` to see which ones are modified) to a safe
+directory and then reset with the command
+
+{% highlight bash %}
 cd ~/PHY494-resources
 # Next command only if you ran into a merge conflict
 # during a 'git pull'
@@ -315,35 +343,11 @@ git merge --abort
 
 # undo ALL of YOUR changes
 git reset --hard HEAD
-~~~
+{% endhighlight %}
 
 **WARNING**: This will undo *all your changes* but will allow you to
 just run the next `git pull` command again without problems.)
 
-{% comment %}
-
-You should get a new file, `02_python/02-intro-python.ipynb`. Copy it
-to *your* class directory:
-
-~~~
-cp ~/PHY494-resources/02_python/02-intro-python.ipynb ~/PHY494/02_python/
-~~~
-
-and create a new commit with it:
-
-~~~
-cd ~/PHY494/02_python/
-git add 02-intro-python.ipynb
-git commit -m "Lesson 02 Intro to Python notebook"
-~~~
-
-Open the notebook (`jupyter notebook`) and then we will continue with
-[02 Introduction to Python]({{site.baseurl}}{%post_url 2016-01-19-02_Introduction_to_Python%}).
-
-At the end of today's class, commit your changes to the notebook and
-push to your github repository.
-
-{% endcomment %}
 
 
 ## More... ##
