--- a/_posts/2017-01-24-05_Debugging.md
+++ b/_posts/2017-01-24-05_Debugging.md
@@ -57,14 +57,40 @@ but you have to do it --- code that produces wrong results is useless.
 
 ## Activity: Fix as many bugs as possible!
 
+Code for the examples below is in the
+[PHY494-resources repository]({{site.baseurl%}}{% post_url
+2017-01-24-04_Git_basics %}#class-resources-on-github): Pull in the
+latest updates
+
+{% highlight bash %}
+cd ~/PHY494-resources
+git pull
+{% endhighlight %}
+
+then copy the code examples to your work directory for this lesson,
+`~/PHY494/05_debugging`,
+
+{% highlight bash %}
+cp -r ~/PHY494-resources/05_debugging ~/PHY494
+{% endhighlight %}
+
+and work there
+
+{% highlight bash %}
+cd ~/PHY494/05_debugging
+{% endhighlight %}
+
+
 ### Syntax and language
 
+#### Bug 1
 Print the numbers 0 to 9:
 {% highlight python %}
 fro num in range(10):
     print(num)
 {% endhighlight %}
 
+#### Bug 2
 Print the squares of the numbers 0 to 9:
 {% highlight python %}
 for num in range(10):
@@ -73,6 +99,7 @@ for num in range(10):
 print("Done") 
 {% endhighlight %}
 
+#### Bug 3
 Print "error" for input 0:
 {% highlight python %}
 x = float(input("Enter non-zero number --> "))
@@ -80,6 +107,7 @@ if x = 0:
    print("ERROR: number cannot be 0") 
 {% endhighlight %}
 
+#### Bug 4
 Define the sinc-function $$\mathrm{sinc}(x) = \sin(x)/x$$:
 {% highlight python %}
 def sinc(x):
@@ -96,7 +124,7 @@ slicing problems, try to build and slice lists interactively in
 `ipython` and then transfer the working slice recipe to your code. You
 sometimes may want to create a simpler or shorter list for testing.
 
-
+#### Bug 5
 Show that my favorite season in Arizona is winter:
 
 {% highlight python %}
@@ -104,7 +132,7 @@ seasons = ['Spring', 'Summer', 'Fall', 'Winter']
 print('My favorite season is ', seasons[4])
 {% endhighlight %}
 
-
+#### Bug 6
 Create a list of values -10, -9.8, -9.6, ..., -0.2, 0, 0.2, ..., 10.
 
 {% highlight python %}
@@ -119,7 +147,7 @@ x = [-10 + i*h for i in range(100)]
 typically, you have to test them explicitly. (*Corner cases* occur
 when multiple edge cases come together.)
 
-
+#### Bug 7
 The sinc function is defined for all real numbers
 {% highlight python %}
 import math
@@ -144,7 +172,7 @@ wrong. You find logic errors by having a good understanding of what
 your code should produce for a given input and then trying different
 inputs and following the input through the code.
 
-
+#### Bug 8
 Create a list of squares of the first 10 natural numbers (0, 1,
 2, ..., 10) and print their sum [^2]:
 {% highlight python %}
@@ -161,7 +189,7 @@ print("sum of squares", sum_s)
 # result should be 385
 {% endhighlight %}
 
-
+#### Bug 9
 Calculate the position of an object in free fall as a function of time
 and store time points (in 1-s intervals) and positions in two arrays
 (for plotting):[^3]
