split 07 Numbers/Errors into two posts
- 07 Numbers
- 08 Errors
- also adjusted resources

--- a/_posts/2017-01-31-07_Numbers.md
+++ b/_posts/2017-01-31-07_Numbers.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 07 Numbers and Errors
+title: 07 Numbers
 ---
 
 When working with numerical code, one has to be aware of the
 limitations imposed by the
 [representation of numbers in the computer](#representation-of-numbers)
-and the [numerical errors](#errors) that algorithms invariably
-accumulate.
+and the [numerical errors]({{site.baseurl}}/{% post_url
+2017-02-02-08_Errors %}) that algorithms invariably accumulate.
 
 ## Representation of numbers
 
@@ -31,19 +31,19 @@ consequences.[^4]
 
 The class will be presented in a Jupyter notebook. The annotated
 notebook is
-[07-numbers.ipynb]({{site.nbviewer.resources}}/07_numbers_errors/07-numbers.ipynb).
+[07-numbers.ipynb]({{site.nbviewer.resources}}/07_numbers/07-numbers.ipynb).
 
 #### Problem: Sine Series
 For one problem you should obtain the notebook
-[07-problem-sine-series.ipynb]({{site.nbviewer.resources}}/07_numbers_errors/07-problem-sine-series.ipynb),
+[07-problem-sine-series.ipynb]({{site.nbviewer.resources}}/07_numbers/07-problem-sine-series.ipynb),
 which already contains part of the code you will need. `git pull` the
 `PHY494-resources` repository and find it under
-`~/PHY494-resources/07_numbers_errors/07-problem-sine-series.ipynb`;
+`~/PHY494-resources/07_numbers/07-problem-sine-series.ipynb`;
 as usual, copy it to your work directory
-(`~/PHY494/07_numbers_errors`) and work on it there.
+(`~/PHY494/07_numbers`) and work on it there.
 
 (The solution
-[07-solution-sine-series.ipynb]({{site.nbviewer.resources}}/07_numbers_errors/07-solution-sine-series.ipynb)
+[07-solution-sine-series.ipynb]({{site.nbviewer.resources}}/07_numbers/07-solution-sine-series.ipynb)
 will be made available later.)
 
 ### Additional resources for Numbers
@@ -52,24 +52,6 @@ will be made available later.)
 * Python Tutorial
 [Floating Point Arithmetic: Issues and Limitations](https://docs.python.org/3/tutorial/floatingpoint.html)
 
-
-## Errors
-
-Algorithms (especially those that involve floating point numbers)
-generally accumulate errors. The key insight is that the total error
-consists of an algorithmic error (also known as the *approximation
-error*), which typically decreases with increasing the computational
-cost and a *round-off error*, which increases with the number of
-operations or the computational cost.
-
-### Class material for Errors
-
-You can follow the lecture in the notebook
-[07-errors.ipynb]({{site.nbviewer.resources}}/07_numbers_errors/07-errors.ipynb).
-
-### Additional resources for Errors
-
-* _Computational Physics_: Chapter **3**
 
 
 ------------------------------------------------------------
@@ -104,5 +86,5 @@ You can follow the lecture in the notebook
      See Bruce M Bush's
      [The Perils of Floating Point](http://www.lahey.com/float.htm)
      and a notebook
-     [Perils_of_Floating_Point.ipynb]({{site.nbviewer.resources}}/07_numbers_errors/Perils_of_Floating_Point.ipynb)
+     [Perils_of_Floating_Point.ipynb]({{site.nbviewer.resources}}/07_numbers/Perils_of_Floating_Point.ipynb)
      based on that article.
