11 ODEs: added notes on first class
- bouncing ball with Euler
- link to notebooks that were developed in class (+ added some comments)

--- a/_posts/2017-02-16-11_ODEs.md
+++ b/_posts/2017-02-16-11_ODEs.md
@@ -37,6 +37,62 @@ We will first study the simplest integrator, the *Euler* algorithm, and
 then look at a more robust class of integrators, the *Runge-Kutta*
 schemes.
 
+## Introductory example: The bouncing ball
+
+We will introduce the basic ideas for solving ODEs by looking at
+a very simple physical example: the bouncing ball with Newton's
+equations of motion
+
+$$
+\frac{d^2 y}{dt^2} = -g
+$$
+
+where $$g$$ is the constant acceleration due to gravity[^2] and
+$$y(t)$$ is the position of the ball as a function of time (its
+trajectory).
+
+The forward Euler scheme for any *first order ODE* 
+
+$$
+\frac{dy}{dt} = f(y, t)
+$$
+
+is
+
+$$
+y(t + h) = y(t) + h f(y(t), t).
+$$
+
+In order to solve the original 2nd order equation of motion we make
+use of the fact that one $$n$$-th order ODE can be written as $$n$$
+coupled first order ODEs, namely
+
+$$
+\begin{align}
+\frac{dx}{dt} &= v\\
+\frac{dv}{dt} &= -g.
+\end{align}
+$$
+
+Solve each of the first order ODEs with the Euler algorithm:
+
+$$
+\begin{align}
+y(t + h) &= y(t) + h v(t)\\
+v(t + h) &= v(t) - h g.
+\end{align}
+$$
+
+In class we developed a simple simulation for free fall and for the
+bouncing ball.
+
+* [bounce_ball_numpy.ipynb]({{site.nbviewer.resources}}/11_ODEs/bounce_ball_numpy.ipynb):
+  simulation and graphing with [matplotlib](http://matplotlib.org)
+* [bounce_ball_visual.ipynb]({{site.nbviewer.resources}}/11_ODEs/bounce_ball_visual.ipynb):
+  visualization with [vpython](http://vpython.org) inside the Jupyter
+  notebook using [vpython-jupyter](https://github.com/BruceSherwood/vpython-jupyter)
+
+
 ## ODEs, standard form, and principles of integrators
 
 The first part of this lesson introduces the formalism and the basic
@@ -44,7 +100,11 @@ ideas behind integration algorithms. The Jupyter notebook
 [11-ODEs.ipynb]({{site.nbviewer.slides}}/11_ODEs/11-ODEs.ipynb#/)
 contains the lecture notes.
 
-#### Additional resources:
+We then revisit the Euler algorithm and introduce much better
+algorithms, namely the Runge-Kutta schemes and the leapfrog (Verlet)
+Additional.
+
+#### integrator resources:
 
 * _Computational Modelling_: Chapter **2**
 * _Computational Physics_: Chapter **9**
@@ -75,7 +135,5 @@ contains the lecture notes.
 	 
 [^2]:
 
-     As usual, `git pull` the
-     [resources repository](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources-2016)
-     to get a local copy of the notebook. Then copy the notebook into
-     your work directory in order to complete the exercises.
+     The boundary condition at the floor is that the ball bounces back
+     elastically, i.e., the velocity is reversed on collision.
