--- a/_posts/2017-02-16-11_ODEs.md
+++ b/_posts/2017-02-16-11_ODEs.md
@@ -102,9 +102,32 @@ contains the lecture notes.
 
 We then revisit the Euler algorithm and introduce much better
 algorithms, namely the Runge-Kutta schemes and the leapfrog (Verlet)
-Additional.
+integrator.
 
-#### integrator resources:
+
+## Accuracy and performance of Euler and Runge-Kutta integrators
+
+The second part shows how to assess the accuracy of integration
+algorithms and analyzes in more depth the simple
+[Euler integrator](https://en.wikipedia.org/wiki/Euler_method) and the
+[Runge-Kutta methods](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods),
+namely `rk2` and `rk4`. As examples we use the simple 1D
+harmonic oscillator with potential energy function $$U(x) =
+\frac{1}{2} k x^2$$, an anharmonic oscillator ($$U(x) = \frac{1}{2} k
+x^2 (1-\frac{2}{3} \alpha x)$$), and a 6-th power oscillator ($$U(x) =
+\frac{1}{6} k x^6$$).
+
+The Jupyter notebook
+[11-ODE_integrators.ipynb]({{site.nbviewer.resources}}/11_ODEs/11-ODE_integrators.ipynb)
+contains the lecture notes[^3]. Skeleton code for in-class problem
+exercises can be found in the notebook
+[11-ODE_integrators_students.ipynb]({{site.nbviewer.resources}}/11_ODEs/11-ODE_integrators_students.ipynb)
+and in the module
+[integrators.py]({{site.resources.fileurl}}/11_ODEs/integrators.py).[^4]
+
+
+
+## Resources ##
 
 * _Computational Modelling_: Chapter **2**
 * _Computational Physics_: Chapter **9**
@@ -137,3 +160,15 @@ Additional.
 
      The boundary condition at the floor is that the ball bounces back
      elastically, i.e., the velocity is reversed on collision.
+
+[^3]:
+
+     Notebook will be posted after class; in the meantime look at the
+     student notebook.
+
+[^4]:
+
+     As usual, `git pull` the resources repository
+     [{{site.resources.shortname}}]({{site.resources.url}}) to get a
+     local copy of the notebook. Then **copy the notebook and all other
+     code into your work directory** in order to complete the exercises.
