11 ODEs: added blurb for Verlet (for next class)

--- a/_posts/2017-02-16-11_ODEs.md
+++ b/_posts/2017-02-16-11_ODEs.md
@@ -101,9 +101,9 @@ ideas behind integration algorithms. The Jupyter notebook
 contains the lecture notes.
 
 We then revisit the Euler algorithm and introduce much better
-algorithms, namely the Runge-Kutta schemes and the leapfrog (Verlet)
-integrator.
-
+algorithms, namely the
+[Runge-Kutta schemes](#accuracy-and-performance-of-euler-and-runge-kutta-integrators)
+and the [Verlet integrator](#verlet-integrators).
 
 ## Accuracy and performance of Euler and Runge-Kutta integrators
 
@@ -124,6 +124,13 @@ exercises can be found in the notebook
 [11-ODE_integrators_students.ipynb]({{site.nbviewer.resources}}/11_ODEs/11-ODE_integrators_students.ipynb)
 and in the module
 [integrators.py]({{site.resources.fileurl}}/11_ODEs/integrators.py).[^4]
+
+## Verlet integrators
+
+The third part introduces a different class of integrators: time
+reversible (and symplectic) integrators such as the **velocity
+Verlet** algorithm, which have worse accuracy than e.g. RK4 but long
+term stability.
 
 
 
