updated 11: links to Verlet notebooks (just full ones)

--- a/_posts/2017-02-16-11_ODEs.md
+++ b/_posts/2017-02-16-11_ODEs.md
@@ -132,6 +132,13 @@ reversible (and symplectic) integrators such as the **velocity
 Verlet** algorithm, which have worse accuracy than e.g. RK4 but long
 term stability.
 
+* The notebook
+  [11-ODE-integrators-verlet.ipynb]({{site.nbviewer.resources}}/11_ODEs/11-ODE-integrators-verlet.ipynb)
+  implements the *velocity Verlet* algorithm and shows how to use it
+  to calculate the orbit of the Earth around the sun.
+* [11-ODE-visualize-planets.ipynb]({{site.nbviewer.resources}}/11_ODEs/11-ODE-visualize-planets.ipynb)
+  shows how to visualize planetary motion in 3D with vpython.
+
 
 
 ## Resources ##
