15: minor improvements to text

--- a/_posts/2017-03-30-15_PDEs.md
+++ b/_posts/2017-03-30-15_PDEs.md
@@ -5,7 +5,7 @@ title: 15 Partial Differential Equations (PDEs)
 
 Most physical phenomena are ultimately described by a relationship between changing quantities. If only a single quantity such as time is changing, [Ordinary Differential Equations]({{site.baseurl}}{% post_url 2017-02-16-11_ODEs %}) (ODEs) result. However, as soon as more than a single quantity varies independently from the other ones, [partial differential equations](http://mathworld.wolfram.com/PartialDifferentialEquation.html) (**PDEs**) have to be solved.
 
-For example, a scalar field $$U(x, y)$$ admits the the general PDE
+For example, a scalar field $$U(x, y)$$ admits the general PDE
 
 $$
 A(x, y)\frac{\partial^2 U}{\partial x^2} +
@@ -16,16 +16,18 @@ E(x, y)\frac{\partial U}{\partial y} +
 F(x, y) = 0 
 $$
 
+For notational convenience, partial derivatives are often written in subscript notation, so the same general equation reads
+
 $$
 A(x, y) U_{xx} +
 2B(x, y) U_{xy} +
 C(x, y) U_{yy} + 
 D(x, y) U_{x} +
 E(x, y) U_{y} +
-F(x, y) = 0
+F(x, y) = 0.
 $$
 
-(For notational convenience, partial derivatives are often written in subscript notation.)
+
 
 ## Classes of second-order PDEs
 
