--- a/_posts/2017-04-20-17_PDEs_waves.md
+++ b/_posts/2017-04-20-17_PDEs_waves.md
@@ -22,7 +22,7 @@ We can then transform the PDE into a finite difference equation on a
 $$\Delta x, \Delta t$$ lattice. The difference equation can be solved
 with a **time stepping scheme** where we start from the initial values
 and solve the spatial component for increasing times $$t = \Delta t,
-2\Delta t, 3\Delta t, \dots$$ using either an explicit method such as
+2\Delta t, 3\Delta t, \dots$$ using an explicit method such as
 the *Leapfrog algorithm*, similar to the
 [solution for the heat equation]({{site.baseurl}}{% post_url
 2017-04-13-16_PDEs_Time_Stepping %}).
@@ -42,7 +42,18 @@ therefore stable.
 For the wave equation the **Courant condition** follows
 
 $$
+c \le \frac{\Delta x}{\Delta t}
+$$
 
+or when written as
+
+$$
+\Delta t \le \frac{\Delta x}{c}
+$$
+
+it means that the time step $$\Delta t$$ (for a given $$\Delta x$$)
+must be *smaller than the time that the wave takes to travel one grid
+step*.
 
 ## Class material
 
