--- a/_posts/2017-04-20-17_PDEs_waves.md
+++ b/_posts/2017-04-20-17_PDEs_waves.md
@@ -12,8 +12,8 @@ $$
 \frac{\partial^2 y(x, t)}{\partial x^2} = \frac{1}{c^2} \frac{\partial^2 y(x, t)}{\partial t^2}
 $$
 
+whose solutions are traveling waves with wave velocity $$c$$.
 
-and it depends on both space and time derivatives.
 
 
 ## Leap frog algorithm for solving the wave equation
