--- a/_posts/2017-04-20-17_PDEs_waves.md
+++ b/_posts/2017-04-20-17_PDEs_waves.md
@@ -12,7 +12,19 @@ $$
 \frac{\partial^2 y(x, t)}{\partial x^2} = \frac{1}{c^2} \frac{\partial^2 y(x, t)}{\partial t^2}
 $$
 
-whose solutions are traveling waves with wave velocity $$c$$.
+whose solutions are traveling waves with wave velocity $$c$$. The wave
+equation in 2D can be derived in the same fashion as for the 1D case
+and reads
+
+$$
+\left(\frac{\partial^2}{\partial x^2} + \frac{\partial^2}{\partial y^2}\right)u(x, y, t) - \frac{1}{c^2} \frac{\partial^2 u}{\partial t^2} = 0
+$$
+
+or in general (3D)
+
+$$
+\boldsymbol{\nabla}^2 u(\mathbf{x}, t) - \frac{1}{c^2} \frac{\partial^2}{\partial t^2}u(\mathbf{x}, t) = 0.
+$$
 
 
 
@@ -26,6 +38,32 @@ and solve the spatial component for increasing times $$t = \Delta t,
 the *Leapfrog algorithm*, similar to the
 [solution for the heat equation]({{site.baseurl}}{% post_url
 2017-04-13-16_PDEs_Time_Stepping %}).
+
+For example, in the 2D case, the  finite difference approximation for
+the Laplace operator is
+
+$$
+\begin{split}
+\left(\frac{\partial^2}{\partial x^2} + \frac{\partial^2}{\partial y^2}\right)u(x, y, t) &\approx
+ \frac{u(x+\Delta x, y, t) - 2u(x, y, t) + u(x-\Delta x, y, t)}{\Delta x^2} \\
+ &+ \frac{u(x, y + \Delta y, t) - 2u(x, y, t) + u(x, y-\Delta y, t)}{\Delta y^2}
+\end{split}
+$$
+
+Setting $$\Delta x = \Delta y = \delta$$ (same spacing in $$x$$ and $$y$$)
+and $$u_{ijn} := u(i\delta, j\delta, n\Delta t)$$ we obtain the
+discretized 2D wave equation
+
+$$
+u_{i,j,n+1} = 2(1 - 2\beta^2)u_{i,j,n} - u_{i,j,n-1} + \beta^2(u_{i+1,j,n} + u_{i-1,j,n} + u_{i,j+1,n} + u_{i,j-1,n})\\
+\beta := \frac{c}{\delta / \Delta t}
+$$
+
+where the unknown (future) term is on the left hand site and can be
+computed from all known (present and past) terms on the right hand
+side.
+
+
 
 ## Von Neumann stability analysis
 
@@ -45,7 +83,7 @@ $$
 c \le \frac{\Delta x}{\Delta t}
 $$
 
-or when written as
+(1D case) or when written as
 
 $$
 \Delta t \le \frac{\Delta x}{c}
@@ -55,11 +93,16 @@ it means that the time step $$\Delta t$$ (for a given $$\Delta x$$)
 must be *smaller than the time that the wave takes to travel one grid
 step*.
 
+In the 2D case, the Courant condition is $$c \le \frac{1}{\sqrt{2}}
+\frac{\delta}{\Delta t}$$.
+
+
 ## Class material
 
 * Student notebook: [^1]: Leap-frog method for the wave equation and von Neumann stability
     analysis: [17_PDEs_waves-students.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_waves-students.ipynb)
 * Lecture notebooks [^2] (correspond to the student notebooks):[17_PDEs_waves.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_waves.ipynb).
+* Lecture notebook for 2D waves: [17_PDEs_2D_waves.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_2D_waves.ipynb)
 
 #### Additional resources  ####
 
