17 Final Remarks added

--- a/_posts/2017-04-20-17_PDEs_waves.md
+++ b/_posts/2017-04-20-17_PDEs_waves.md
@@ -103,6 +103,9 @@ In the 2D case, the Courant condition is $$c \le \frac{1}{\sqrt{2}}
     analysis: [17_PDEs_waves-students.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_waves-students.ipynb)
 * Lecture notebooks [^2] (correspond to the student notebooks):[17_PDEs_waves.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_waves.ipynb).
 * Lecture notebook for 2D waves: [17_PDEs_2D_waves.ipynb]({{site.nbviewer.resources}}/17_PDEs_waves/17_PDEs_2D_waves.ipynb)
+* Final remarks on PDEs:
+  [17_PDEs_Final_Remarks.ipynb]({{site.nbviewer.slides}}/17_PDEs_waves/17_PDEs_Final_Remarks.ipynb) ([PDF]({{site.resources.fileurl}}/17_PDEs_Final_Remarks.pdf))
+
 
 #### Additional resources  ####
 
