fixes in old posts

--- a/_posts/2017-01-24-05_Debugging.md
+++ b/_posts/2017-01-24-05_Debugging.md
@@ -58,7 +58,7 @@ but you have to do it --- code that produces wrong results is useless.
 ## Activity: Fix as many bugs as possible!
 
 Code for the examples below is in the
-[PHY494-resources repository]({{site.baseurl%}}{% post_url
+[PHY494-resources repository]({{site.baseurl}}{% post_url
 2017-01-24-04_Git_basics %}#class-resources-on-github): Pull in the
 latest updates
 
