adapted shell 01 for use with atom

--- a/_posts/2018-01-11-01_Unix_Shell.md
+++ b/_posts/2018-01-11-01_Unix_Shell.md
@@ -318,9 +318,11 @@ bash: cd: bogus: No such file or directory
         cd
         ls -a
 
-2. Go to the `bin` directory that is located in the root directory. List the files
+2. Go to the `bin` directory that is located in the root directory (at
+   least on Linux and macOS). List the files
    there. Did you find "nano" and "grep"? If not, look into `/usr/bin` 
-3. What does `ls -R /usr` show? (Try `^C`...)
+3. What does `ls -R /` show? (Try `^C`, i.e., press CONTROL and C at
+   the same time...)
 4. Try other options of `ls` such as `-sh` or `-sha`. --- ask `ls` for
    help!
 5. Is there a difference between `ls -sha`, `ls -ash`, and `ls -a -s
@@ -350,7 +352,8 @@ bash: cd: bogus: No such file or directory
 #### Commands ####
 
 * `mkdir` (make directory)
-* your editor of choice
+* your editor of choice (*atom* by default for the class, `nano` is
+  an alternative choice [^2])
 
 #### Directory structure for the class ####
 
@@ -368,7 +371,7 @@ Note:
 
 * *Avoid spaces and most special characters in file names.* All
   letters and numbers together with underscore `_`, minus sign `-`,
-  and period `.` are ok.[^1]
+  and period `.` are ok. [^1]
 * Plain `mkdir` cannot create multiple directories deep in one go
   unless you have the `-p` option (check!).
 
@@ -380,38 +383,57 @@ Note:
 
 #### Creating text files with a text editor ####
 
-Run `nano` [^2]: 
+Run `atom`: 
 {% highlight bash %}
-nano
+atom
 {% endhighlight %}
 
 You should see something like this:
 
-![Nano screenshot]({{site.baseurl}}/{{site.figs}}/nano.png)
+![atom welcome screenshot]({{site.baseurl}}/{{site.figs}}/atom_welcome.jpg)
 
-(Note: for real work use a more powerful editor such as
-[Emacs](http://www.gnu.org/software/emacs/),
-[Vim](http://www.vim.org/) (both of which come with a steep learning
-curve), or a graphical editor such as
-[Gedit](http://projects.gnome.org/gedit/),
-[Sublime Text](https://www.sublimetext.com/) or
-[Atom](https://atom.io/). On Windows, a free editor is
-[Notepad++](http://notepad-plus-plus.org/).)
-
-Create a todo list with content
+We will now create a TODO list in a file with name `TODO` and content
 
     Plan for today:
 
     1. find rebel base
     2. destroy!
 
-Save it to file 'TODO' with the command `^O` and type the file name
-`TODO` and exit with `^X`. Check that the file is there with `ls`.
+
+1. Open a new file via the menu option
+
+   *File* → *New File*
+
+   You should have a tab named *untitled*.
+   
+   Close all the other tabs. It should look like this: 
+   
+   ![atom new file]({{site.baseurl}}/{{site.figs}}/atom_untitled.jpg)
+
+2. Type the todo list into the editor window.
+
+   ![atom todo list]({{site.baseurl}}/{{site.figs}}/atom_todo.jpg)
+
+3. Save it to file with name 'TODO' with menu option
+
+   *File* → *Save*
+   
+   Make sure to navigate to your the `PHY494/01_shell/Documents/work` directory.
+
+   ![atom todo list]({{site.baseurl}}/{{site.figs}}/atom_project_file_view.jpg)
+
+   You can hide the "project" view with the directory structure.
+
+4. Quit atom (details depend on your operating system; find the *Quit*
+   menu option either under *File* or *Atom*.
+
+5. Check that the file is in the directory with `ls`.
+
 
 You can re-open the file from the command line:
 
 {% highlight bash %}
-nano TODO
+atom TODO
 {% endhighlight %}
 
 
@@ -796,7 +818,7 @@ Updated resources in /Users/oliver/PHY494-resources
 
 [^2]: 
 
-    **Upgrading nano**: If you are using `nano` then you want to
+    **Upgrading nano**: If you are using `nano` as your editor then you want to
     enable a few useful features including syntax highlighting. The
     easiest way is to download the config files as the zip file
     [nanoconfig.zip]({{site.baseurl}}/{{site.siteresources}}/nanoconfig.zip)
