also use atom for the optional exercises

--- a/_posts/2018-01-11-01_Unix_Shell.md
+++ b/_posts/2018-01-11-01_Unix_Shell.md
@@ -494,7 +494,7 @@ today, this is optional, but you are encouraged to do it.
 5. Create a new text file `data/notes/hints.txt` and write any
    [hints](https://en.wikipedia.org/wiki/Ice_planet)  for possible
    rebel bases into this file.
-6. Open `TODO.txt` in `nano` and add a note to item 1 too look in the
+6. Open `TODO.txt` in `atom` and add a note to item 1 too look in the
    hints.txt file. Save and exit.
 7. Make a copy of your `notes` directory in your work directory:
 
@@ -699,7 +699,7 @@ Go into the `PHY494-resources/01_shell/data` directory.
 
 ### Activity
 
-1. Read the `README` file (e.g. using `nano` or `cat` or `less` (for
+1. Read the `README` file (e.g. using `atom` or `cat` or `less` (for
 the latter, use `h` to get help and `q` to quit)).
 
 2. Count the number of entries in *all files ending in "csv"*. (Hint:
@@ -734,7 +734,7 @@ in the following I will assume it; if you changed the path to
 e.g. `~/classes/2016/PHY494/bin` then you will need to use that path
 in all the following examples.)
 
-Using`nano`, create the following script `~/bin/update_resources.sh`:
+Using`atom`, create the following script `~/bin/update_resources.sh`:
 
 {% highlight bash %}
 # PHY 494 script to update the resources repository
@@ -747,7 +747,7 @@ git pull
 echo "Updated resources in ${GIT_REPOSITORY}"
 {% endhighlight %}
 
-(You create the script by (1) `nano ~/bin/update_resources.sh` (opens
+(You create the script by (1) `atom ~/bin/update_resources.sh` (opens
 empty file if it does not exist), (2) type all the lines into the
 editor (or copy & paste), (3) save the file and exit the editor.)
 
