added image for shell/gui

--- a/_posts/2018-01-11-01_Unix_Shell.md
+++ b/_posts/2018-01-11-01_Unix_Shell.md
@@ -32,6 +32,8 @@ computer. And like an experimental scientist, you will have to be able
 to interact with it, adjust it, tweak it, fix it, and generally make
 it do things that it has never done before.
 
+![CLI and GUI provide access to the operating system.]({{site.baseurl}}/{{site.figs}}/os_shell_organization.png)
+
 You are probably used to interacting with a computer via a graphical
 user interface ("GUI") — windows, browsers, a mouse or touch
 screen. Although convenient, this limits you to the interactions
