ipython with matplotlib and %run

--- a/_posts/2018-01-16-02_HelloWorld.md
+++ b/_posts/2018-01-16-02_HelloWorld.md
@@ -123,9 +123,75 @@ In [1]:
 
 where `In [1]:` is the prompt.
 
-To exit, give the `exit()` command or `^D` (`Control` + `D`).
-
 Just use `ipython` instead of `python` for interactive work.
+
+### `ipython` basics
+
+* To exit, give the `exit()` command or `^D` (`Control` + `D`).
+* Use arrow keys to move up and down through the history or through
+  multi-line commands.
+* Use TAB-completion.
+* Use `command?` or `?command` (question mark directly before or after
+  a command or object) to get help
+* `%run FILE` executes FILE similarly to `python
+  FILE`.[^2]
+
+
+### `ipython` with `matplotlib`
+
+In the basic plotting example we used the `matplotlib` library for
+plotting and wrote a figure to a file. `ipython` can show figures
+interactively but the details depend on your operating system and
+installed packages. Try the following and see if the figure is
+displayed on your screen when you run `motion.py`:
+
+#### Windows
+
+Run `ipython`
+
+{% highlight bash %}
+ipython --matplotlib=qt5
+{% endhighlight %}
+
+(If `qt5` does not work, try `qt`, `wx`, `tk`, `auto`, or just
+`--matplotlib`.)
+
+In `ipython`
+{% highlight python %}
+%run motion.py
+{% endhighlight %}
+
+
+#### macOS
+
+Run `ipython`
+
+{% highlight bash %}
+ipython --matplotlib=osx
+{% endhighlight %}
+
+
+In `ipython`
+{% highlight python %}
+%run motion.py
+{% endhighlight %}
+
+
+#### Linux
+
+Run `ipython`
+{% highlight bash %}
+ipython --matplotlib=gtk3
+{% endhighlight %}
+
+(If `gtk3` does not work, try `qt5`, `qt`, `wx`, `tk`, `auto`, or just
+`--matplotlib`.)
+
+
+In `ipython`
+{% highlight python %}
+%run motion.py
+{% endhighlight %}
 
 
 ------------------------------------------------------------
@@ -167,4 +233,8 @@ Just use `ipython` instead of `python` for interactive work.
     latter. Provide the file name ("hello.py") and save the file. (In
     the shell, make sure that the file is in place where you expect it
     to be, i.e., `ls -la`.)
-    
+
+[^2]:
+
+    `%run` is an ipython "magic" command, see help on those commands
+    with `%magic`.
