use ipython qtconsole for windows

--- a/_posts/2018-01-16-02_HelloWorld.md
+++ b/_posts/2018-01-16-02_HelloWorld.md
@@ -147,19 +147,19 @@ displayed on your screen when you run `motion.py`:
 
 #### Windows
 
-Run `ipython`
+Run `ipython qtconsole` to show graphics inline:[^3]
 
 {% highlight bash %}
-ipython --matplotlib=qt5
+ipython qtconsole
 {% endhighlight %}
-
-(If `qt5` does not work, try `qt`, `wx`, `tk`, `auto`, or just
-`--matplotlib`.)
 
 In `ipython`
 {% highlight python %}
 %run motion.py
 {% endhighlight %}
+
+
+
 
 
 #### macOS
@@ -238,3 +238,21 @@ In `ipython`
 
     `%run` is an ipython "magic" command, see help on those commands
     with `%magic`.
+
+[^3]:
+
+    If you don't want to see graphics inline but as a separate window
+    you can try
+	
+	{% highlight bash %}
+    ipython --matplotlib=qt5
+    {% endhighlight %}
+    
+    (If `qt5` does not work, try `qt`, `wx`, `tk`, `auto`, or just
+    `--matplotlib`.)
+	
+	However, this does not always work and might require additional
+	packages. Please share any insights and solutions!
+	
+	 
+	
