--- a/_posts/2018-01-25-04_Git_basics.md
+++ b/_posts/2018-01-25-04_Git_basics.md
@@ -5,7 +5,7 @@ title:  04 Git Basics
 
 This is a short introduction to one of the most essential tools in
 software development: a
-[version control systems](http://swcarpentry.github.io/git-novice/reference.html#version-control)
+[version control system](https://swcarpentry.github.io/git-novice/reference/#version-control)
 and in particular the [Git](https://git-scm.com/) tool.[^0]
 
 A **version control system** (VCS) manages files and tracks changes to
@@ -49,7 +49,8 @@ develop as part of your assignments and projects.
 Let's use `git` to manage what we have done so far.
 
 If you want to read more about *Git*, have a look at the free [Pro Git
-Book](https://git-scm.com/book) by Scott Chacon and Ben Straub.
+Book](https://git-scm.com/book) by Scott Chacon and Ben Straub and see
+the [other resources](#more).
 
 ### Configuring Git ###
 
