--- a/_posts/2018-01-25-04_Git_basics.md
+++ b/_posts/2018-01-25-04_Git_basics.md
@@ -438,8 +438,13 @@ just run the next `git pull` command again without problems.)
      and includes an image from Jorge Cham's
      [PhD Comics](http://www.phdcomics.com/)
      ["FINAL".doc](http://www.phdcomics.com/comics.php?n=1531) (which
-    is &copy; 2012 Jorge Cham) as well as images from
-    https://git-scm.com
+     is &copy; 2012 Jorge Cham). It also uses images and ideas from
+     [git-scm.com](https://git-scm.com) (used under the [Creative
+     Commons Attribution 3.0 Unported
+     License](https://creativecommons.org/licenses/by/3.0/)) and from 
+     [git-scm.com/book](https://git-scm.com/book) (used under the 
+     [Creative Commons Attribution Non Commercial Share Alike 3.0
+     license](https://creativecommons.org/licenses/by-nc-sa/3.0/)).
 
 [^1]:
 
