more link fixing

--- a/_posts/2018-01-25-04_Git_basics.md
+++ b/_posts/2018-01-25-04_Git_basics.md
@@ -449,7 +449,7 @@ just run the next `git pull` command again without problems.)
 [^1]:
 
      See also Software Carpentry's list of
-     [git configuration options for different editors](http://swcarpentry.github.io/git-novice/02-setup.html).
+     [git configuration options for different editors](https://swcarpentry.github.io/git-novice/02-setup/).
 
 	 For problems with setting up editors in Windows, see the
      StackOverflow question
